example/lib/src/generated/errors/errors_localization_ru.dart
// This file is generated by the Google Sheets localization tool. Do not edit manually.

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Russian (`ru`).
class ErrorsLocalizationRu extends ErrorsLocalization {
  ErrorsLocalizationRu([String locale = 'ru']) : super(locale);

  @override
  String get error => 'Произошла ошибка';

  @override
  String get unexpectedError => 'Произошла неизвестная ошибка';

  @override
  String authErrorMessages(String errorCode) {
    String _temp0 = intl.Intl.selectLogic(
      errorCode,
      {
        'passwordLengthError': 'Пароль должен быть не менее 6 символов',
        'invalidEmailOrPhoneNumberError':
            'Пожалуйста, укажите действительный адрес электронной почты или номер телефона в международном формате. Примеры: me@example.com и +1234567890987.',
        'invalidEmailError': 'Неверный формат электронной почты',
        'operationNotAllowedError': 'Операция не разрешена',
        'weakPasswordError': 'Пароль слишком слабый',
        'userTokenExpiredError': 'Токен пользователя истек',
        'invalidPhoneNumberError':
            'Пожалуйста, укажите номера телефона в международном формате, начиная с + и кода страны',
        'invalidActionCodeError': 'Код операции недействителен',
        'networkRequestFailedError': 'Ошибка соединения с сервером',
        'tooManyRequestsError': 'Слишком много запросов',
        'acceptTermsAndConditionsError':
            'Пожалуйста, примите условия пользовательского соглашения и подтвердите политику конфиденциальности.',
        'acceptAIConsentError':
            'Пожалуйста, подтвердите, что консультации с искусственным интеллектом и не заменяет профессиональную медицинскую помощь лицензированного специалиста.',
        'emailOrPhoneError': 'Ошибка электронной почты или номера телефона',
        'passwordError': 'Ошибка пароля',
        'unknownError': 'Неизвестная ошибка',
        'googleSSOError': 'Ошибка Google SSO',
        'emailAlreadyInUse':
            'Электронная почта уже используется другой учетной записью',
        'phoneAlreadyInUse':
            'Номер телефона уже используется другой учетной записью',
        'invalidCredentialError': 'Данные входа не верны',
        'invalidAppCredentialError':
            'Недействительные учетные данные приложения',
        'invalidVerificationCodeError': 'Неверный код подтверждения',
        'other': 'Неизвестная ошибка',
      },
    );
    return '$_temp0';
  }

  @override
  String get bugReportSentText => 'Отчёт об ошибке успешно отправлен.';
}
